<resources>
    <string name="app_name">Wall of Light</string>
    <string name="app_icon">App Icon</string>
    <string name="email" translatable="false">walloflight@42volt.de</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Images">Images</string>
    <string name="androidPaint">Paint</string>
    <string name="gif">Gifs</string>
    <string name="animate">Animated Images</string>

    <!-- START ProcessImageFragment related strings -->
    <string name="choosePictureButton">Choose a Picture</string>
    <string name="sendImageButton">Send Image</string>
    <string name="toggleAnimationButton">Toggle Animation</string>
    <string name="imageViewDescription">The Picture that will be sent to the Wall of Light</string>
    <string name="choosePictureRequest">Select Picture</string>
    <!-- END ProcessImageFragment related strings -->

    <!-- START DrawingFragment related strings -->
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="brush_size_title">Brush size:</string>
    <string name="eraser_size_title">Eraser size:</string>
    <string name="new_drawing_title">New drawing</string>
    <string name="save_drawing_title">Save drawing</string>
    <string name="start_new_drawing_question">Start new drawing (you will lose the current drawing)?</string>
    <string name="save_drawing_question">Save drawing to device Gallery?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="drawing_saved_success">Drawing saved to Gallery!</string>
    <string name="drawing_saved_error">Whoops! Image could not be saved.</string>
    <string name="drawing_description">drawing</string>
    <!-- END DrawingFragment related strings -->

    <!-- START connection and input errors -->
    <string name="imageErrorToast">Failed to process image!</string>
    <string name="wifiErrorToast">Network Error. Make sure to activate WiFi!</string>
    <string name="selectPictureErrorToast">Couldn\'t find any app to open a picture.</string>
    <string name="setIpAddressError">Couldn\'t set IP-Address from Settings.</string>
    <string name="unknownHostError">Couldn\'t connect to the given IP address.</string>
    <string name="connectionInterrupted">Connection interrupted.</string>
    <string name="unknownError">Whoops something went wrong!</string>
    <!-- END connection and input errors -->

    <!-- START Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Network</string>
    <string name="pref_title_resolutionX">Resolution X</string>
    <string name="pref_key_resolutionX" translatable="false">general_resolutionX</string>
    <string name="pref_default_resolutionX" translatable="false">88</string>
    <string name="pref_title_resolutionY">Resolution Y</string>
    <string name="pref_key_resolutionY" translatable="false">general_resolutionY</string>
    <string name="pref_default_resolutionY" translatable="false">88</string>
    <string name="pref_title_gamma">Gamma</string>
    <string name="pref_key_gamma" translatable="false">general_gamma</string>
    <string name="pref_default_gamma" translatable="false">2.8</string>
    <string name="pref_title_ip">IP-Address</string>
    <string name="pref_key_ip" translatable="false">sync_ip</string>
    <string name="pref_default_ip" translatable="false">192.168.120.73</string>

    <string name="high_score">HIGH SCORE</string>
    <string name="score">SCORE</string>
    <string name="instructions">Swipe to move. 2 + 2 = 4. Reach 2048.</string>
    <string name="you_win">You Win!</string>
    <string name="game_over">Game Over!</string>
    <string name="go_on">Tap to Continue</string>
    <string name="for_now">For now…</string>
    <string name="endless">"Endless" Mode</string>

    <!-- Confirmation dialog-->
    <string name="reset">Reset</string>
    <string name="continue_game">Cancel</string>
    <string name="reset_dialog_title">Reset game?</string>
    <string name="reset_dialog_message">Are you sure you wish to reset the game?</string>
    <string name="twozero">2048 Game</string>

</resources>
