<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_resolutionX"
        android:inputType="number"
        android:key="@string/pref_key_resolutionX"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_resolutionX" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_resolutionY"
        android:inputType="number"
        android:key="@string/pref_key_resolutionY"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_resolutionY" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_gamma"
        android:inputType="numberDecimal"
        android:key="@string/pref_key_gamma"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_gamma" />



</PreferenceScreen>
