<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <Button
        android:id="@+id/choosePictureButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/choosePictureButton"
        android:onClick="selectPicture" />

    <com.felipecsl.gifimageview.library.GifImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choosePictureButton"
        android:layout_above="@+id/sendImageButton"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imageViewDescription" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toggleAnimationButton"
        android:text="@string/sendImageButton"
        android:id="@+id/sendImageButton"
        android:layout_centerHorizontal="true"
        android:onClick="sendImage"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggleAnimationButton"
        android:id="@+id/toggleAnimationButton"
        android:layout_centerHorizontal="true"
        android:onClick="toggleGifAnimation"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
